test/parser/prs/supply-12.stderr
At: "supply-12.hac":6:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(process-prototype) [4:1..22]
#STATE#	{ [4:24]
#STATE#	list<(def-body-item)>: (instance-decl) ... [5:1..8]
#STATE#	keyword: prs [6:1..3]
#STATE#	< [6:5]
#STATE#	(null) 
#STATE#	, [6:7]
#STATE#	! [6:9]
in state #STATE#, possible rules are:
	member_index_expr_pair : optional_member_index_expr ',' . optional_member_index_expr  (#RULE#)
	optional_member_index_expr : .  (#RULE#)
acceptable tokens are: 
	'>' (reduce)
	'|' (reduce)
	ID (shift)
	SCOPE (shift)
