test/parser/prs/supply-12.hac
// "supply-12.hac"
// expect-fail

defproc foo(bool x, y) {
bool GND;
prs < , !GND> {
	x => y-
}
}

